--- a/wp-content/themes/canadianadventureco/style.css
+++ b/wp-content/themes/canadianadventureco/style.css
@@ -1198,13 +1198,18 @@ input[type=range]::-webkit-slider-runnable-track {
   border-radius: 25px; }
 
 input[type=range]::-webkit-slider-thumb {
-  height: 20px;
-  width: 39px;
+  height: 39px;
+  width: 20px;
   border-radius: 7px;
   background: #303030;
   cursor: pointer;
   -webkit-appearance: none;
-  margin-top: -3.6px; }
+  margin-top: -13.6px; }
+  @media screen and (min-width: 480px) {
+    input[type=range]::-webkit-slider-thumb {
+      height: 20px;
+      width: 39px;
+      margin-top: -3.6px; } }
 
 input[type=range]:focus::-webkit-slider-runnable-track {
   background: #068fbf; }
@@ -1217,11 +1222,18 @@ input[type=range]::-moz-range-track {
   border-radius: 25px; }
 
 input[type=range]::-moz-range-thumb {
-  height: 20px;
-  width: 39px;
+  height: 39px;
+  width: 20px;
   border-radius: 7px;
   background: #303030;
-  cursor: pointer; }
+  cursor: pointer;
+  -webkit-appearance: none;
+  margin-top: -13.6px; }
+  @media screen and (min-width: 480px) {
+    input[type=range]::-moz-range-thumb {
+      height: 20px;
+      width: 39px;
+      margin-top: -3.6px; } }
 
 input[type=range]::-ms-track {
   width: 67%;
@@ -1241,11 +1253,18 @@ input[type=range]::-ms-fill-upper {
   border-radius: 50px; }
 
 input[type=range]::-ms-thumb {
-  height: 20px;
-  width: 39px;
+  height: 39px;
+  width: 20px;
   border-radius: 7px;
   background: #303030;
-  cursor: pointer; }
+  cursor: pointer;
+  -webkit-appearance: none;
+  margin-top: -13.6px; }
+  @media screen and (min-width: 480px) {
+    input[type=range]::-ms-thumb {
+      height: 20px;
+      width: 39px;
+      margin-top: -3.6px; } }
 
 input[type=range]:focus::-ms-fill-lower {
   background: #068fbf; }
@@ -1260,8 +1279,15 @@ input[type=range]:focus::-ms-fill-upper {
   -webkit-justify-content: space-between;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  width: 67%;
-  margin: 0 auto; }
+  margin: 0 auto;
+  width: 70%;
+  position: absolute;
+  left: 72px; }
+  @media screen and (min-width: 480px) {
+    .under-range {
+      position: relative;
+      left: 8px;
+      width: 67%; } }
 
 .price-estimate {
   background-color: #068fbf;
